--- a/_sass/skins/_default.scss
+++ b/_sass/skins/_default.scss
@@ -5,10 +5,10 @@
 ///
 
 // main colors
-$main-color-1:     #fc4d50;
+$main-color-1:     #ff8300;
 $text-color-1:     #fff;
 
-$main-color-2:     #fca24d;
+$main-color-2:     #fc4d50;
 $text-color-2:     #fff;
 
 $main-color-3:     #f2f2f2;
