--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,7 @@
         title="TeXt is a succinct theme for blogging." href="https://github.com/kitian616/jekyll-TeXt-theme">TeXt Theme</a>.<br/>
         <a type="application/rss+xml" href="{{ _paths_rss }}">{{ _locale_nav_rss }}</a></span>
         <a href="https://www.certmetrics.com/amazon/public/badge.aspx?i=3&t=c&d=2018-09-18&ci=AWS00592663">
-          <img border="0" alt="W3Schools" src="https://www.certmetrics.com/amazon/Telerik.Web.UI.WebResource.axd?imgid=efc46aa94e4c475fa15cf772ab803ff1&type=rbi" width="100" height="100">
+          <img border="0" alt="W3Schools" src="/assets/images/aws_sysops.png" width="100" height="100">
         </a>
       </p>
       <p>
